# atuo-desk

./: .envrc  .gitignore  Cargo.nix  Cargo.toml  README.md  auto-desk.service  config.ini  config.toml  desktop-automater.service  flake.nix  port-sentinel.service  spec.md
production/: test1.yml
production/client/: Cargo.toml
production/client/src/: main.rs
production/server/: Cargo.toml
production/server/src/: bspwm.rs  common.rs  main.rs  power.rs
production/server/src/common/: backlight.rs  media.rs  power.rs
prototype/: bspwm-client.py
prototype/client/: client.py
prototype/server/: server.py
prototype/server/plugins/: bspwm.py  common.py
src/: bspwm.rs  client.rs  common.rs  config.rs  events.rs  hooks.rs  leftwm.rs  lib.rs  msgs.rs  qtile.rs  server.rs  wm_lib.rs
src/client/: main.rs
src/common/: backlight.rs  media.rs  power.rs  xrandr.rs
src/server/: bspwm.rs  common.rs  main.rs
src/server/common/: xrandr.rs
support-scripts/: auto_desk_api.py
test-data/: regex-test.py  test1.layout  test1.yml
workspaces/bspwm/: Cargo.toml
workspaces/bspwm/src/: lib.rs
workspaces/common/: Cargo.toml
workspaces/common/src/: backlight.rs  lib.rs
workspaces/config/: Cargo.toml
workspaces/config/src/: lib.rs
workspaces/events/: Cargo.toml
workspaces/events/src/: lib.rs
workspaces/hooks/: Cargo.toml
workspaces/hooks/src/: lib.rs
workspaces/leftwm/: Cargo.toml
workspaces/leftwm/src/: lib.rs
workspaces/qtile/: Cargo.toml
workspaces/qtile/src/: lib.rs
workspaces/wm-lib/: Cargo.toml
workspaces/wm-lib/src/: lib.rs
