[package]
name = "auto-desk"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "desktop-automater"
path = "src/server/main.rs"

[[bin]]
name = "auto-desk"
path = "src/client/main.rs"

[workspace]
members = [
    "workspaces/bspwm",
    "workspaces/qtile",
    "workspaces/common",
    "workspaces/wm-lib",
    "workspaces/hooks",
    "workspaces/events",
    "workspaces/config",
]

[features]
default = ["common", "hooks", "qtile"]
bspwm = ["dep:bspwm", "dep:wm_lib"]
qtile = ["dep:qtile", "dep:wm_lib"]
common = ["systemctl", "media", "dep:common"]
systemctl = ["common/systemctl", "dep:common"]
media = ["common/media", "dep:common"]
hooks = ["dep:hooks", "dep:events", "tokio/sync"]

[dependencies]
clap = "3.2.8"
shellexpand = "2.1.0"
config = { path = "workspaces/config"}
common = { path = "workspaces/common", optional=true}
qtile = { path = "workspaces/qtile", optional=true }
bspwm = { path = "workspaces/bspwm", optional=true }
wm_lib = { path = "workspaces/wm-lib", optional=true }
hooks = { path = "workspaces/hooks", optional=true }
events = { path = "workspaces/events", optional=true }
tokio = {version = "1.22", default-features = false, features = ["io-util"]}
futures = {version = "0.3.25", default-features = false, features = ["async-await"]}