[package]
name = "auto-desk"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "desktop-automater"
path = "src/server/main.rs"

[[bin]]
name = "auto-desk"
path = "src/client/main.rs"

[workspace]
members = [
    "workspaces/bspwm",
    "workspaces/qtile",
    "workspaces/leftwm",
    "workspaces/common",
    "workspaces/wm-lib",
    "workspaces/hooks",
    "workspaces/events",
    "workspaces/config",
]

[features]
default = ["common", "hooks", "all_wms"]
bspwm = ["dep:wm_lib"]
qtile = ["dep:wm_lib"]
leftwm = ["dep:wm_lib"]
common = ["systemctl", "media", "dep:common"]
systemctl = ["dep:common", "common/systemctl"]
media = [ "dep:common", "common/media"]
hooks = ["dep:hooks", "dep:events", "tokio/sync"]

all_wms = ["qtile", "bspwm", "leftwm"]

[dependencies]
clap = "3.2.8"
shellexpand = "2.1.0"
sysinfo = "0.27.2"
config = { path = "workspaces/config"}
common = { path = "workspaces/common", optional=true}
qtile = { path = "workspaces/qtile"}  # , optional=true }
bspwm = { path = "workspaces/bspwm"}  # , optional=true }
leftwm = { path = "workspaces/leftwm"}  #, optional=true }
wm_lib = { path = "workspaces/wm-lib", optional=true }
hooks = { path = "workspaces/hooks", optional=true }
events = { path = "workspaces/events", optional=true }
tokio = {version = "1.22", default-features = false, features = ["io-util", "rt-multi-thread"]}
futures = {version = "0.3.25", default-features = false, features = ["async-await"]}