[package]
name = "auto-desk"
version = "0.5.0"
edition = "2021"

# [registries.crates-io]
# protocol = "sparse"

[features]
default = ["common", "hooks", "all_wms"]
common = ["systemctl", "media"]
systemctl = []
media = []
qtile = []
bspwm = []
leftwm = []
all_wms = ["qtile", "bspwm", "leftwm"]
hooks = ["tokio/sync"]

[dependencies]
clap = "3.2.8"
shellexpand = "2.1.0"
sysinfo = "0.27.2"
tokio = { version = "1.22", default-features = false, features = ["io-util", "rt-multi-thread", "time", "fs", "macros", "process"] }
futures = { version = "0.3.25", default-features = false, features = ["async-await"] }
xdg = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.24"
# iw = "0.0.1"
# online = { git = "https://github.com/jesusprubio/online", default-features = false, features = ["tokio-runtime"] }
usb_enumeration = "0.1.2"
btleplug = "0.10"
procfs = "0.14.1"
configparser = "3.0.0"
toml = "0.5"
rdev = "0.5.1"
xdotool = "0.0.2"
freedesktop_entry_parser = "1.3.0"
# users = "0.11.0"
regex = "1.7.1"
local-ip-address = "0.5.1"
log = { version = "0.4.20", features = ["release_max_level_info", "max_level_trace"] }
fern = { version = "0.6.2", features = ["colored"] }
anyhow = "1.0.81"
glob = "0.3.1"

# [build]
# rustflags=["-Z", "instrument-mcount,sparse"]
