[package]
name = "desktop-automater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testing = []

[dependencies]
configparser = "3.0.0"
shellexpand = "2.1.0"
rdev = "0.5.1"
# freedesktop_entry_parser = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.24"
