[package]
name = "bspwm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
config = { path = "../config"}
wm_lib = { path = "../wm-lib" }
shellexpand = "2.1.0"
xdotool = "0.0.2"
procfs = "0.14.0"
freedesktop_entry_parser = "1.3.0"
