[package]
name = "events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iw = "0.0.1"
tokio = {version = "1.22", features = ["time", "fs"]}
online = { version = "4.0.0",  default-features = false, features = ["tokio-runtime"]}
usb_enumeration = "0.1.2"
futures = {version = "0.3.24", default-features = false, features = ["std"]}
btleplug = "0.10"
procfs = "0.14.1"
# notify = { version="5.0", default-features = false, feature=["macos_kqueue"] }