[package]
name = "hooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.22", features = ["sync", "macros", "process"]}  # "rt-multi-thread"
events = {path = "../events"}
config = {path = "../config"}
# futures-util = {version = "0.3.25", default-features = false, features = ["async-await"]}
# futures = {version = "0.3.24", default-features = false, features = ["std"]}

